# predicting-beats-per-minutes-of-songs

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: eda.ipynb
predicting_beats_per_minutes_of_songs/: __init__.py  features.py  model_config.py  plots.py
predicting_beats_per_minutes_of_songs/modeling/: predict.py  train.py
