[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predicting_beats_per_minutes_of_songs"
version = "0.0.1"
description = "Predict songs BPM"
authors = [
  { name = "Giovani Zanfra Brand\u00e3o" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["predicting_beats_per_minutes_of_songs"]
include = ["pyproject.toml", "predicting_beats_per_minutes_of_songs/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["predicting_beats_per_minutes_of_songs"]
force-sort-within-sections = true

